[build-system]
requires = ['setuptools', 'wheel', 'Cython', 'numpy']
build-backend = 'setuptools.build_meta'

[project]
name = 'flashrl'
version = '0.1.0'
description = 'Fast reinforcement learning 💨'
authors = [{name = 'codingfisch', email = 'l_fisc17@wwu.de'}]
readme = 'README.md'
dependencies = ['torch', 'Cython', 'tqdm', 'plotille', 'tensorboard', 'pillow']

[tool.setuptools]
packages = ['flashrl']
include-package-data = true

[tool.setuptools.package-data]
flashrl = ['envs/*.pyx', 'envs/*.c']
